<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actv.CadastroActivity">

    <!--<android.support.v7.widget.Toolbar-->
    <!--android:id="@+id/toolbar"-->
    <!--android:elevation="4dp"-->
    <!--android:layout_height="?attr/actionBarSize"-->
    <!--android:layout_width="match_parent"-->
    <!--android:minHeight="?attr/actionBarSize"-->
    <!--android:layout_alignParentLeft="true"-->
    <!--android:background="?attr/colorPrimary"-->
    <!--app:popupTheme="@style/AppThemeTab" />-->


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tb_main"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:layout_weight="1"
                android:hint="@string/hint_nome"
                android:inputType="textCapSentences"
                android:maxLength="35"
                android:maxLines="1" />

            <EditText
                android:id="@+id/edit_second_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bt_height"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:hint="@string/hint_second_name"
                android:inputType="textCapSentences"
                android:maxLength="50"
                android:maxLines="1" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bt_height"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLength="140"
                android:maxLines="1" />

            <EditText
                android:id="@+id/edit_tel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bt_height"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:hint="@string/hint_telefone"
                android:inputType="number"
                android:maxLength="140"
                android:maxLines="1" />


            <EditText
                android:id="@+id/edit_city"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bt_height"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:hint="@string/hint_city"
                android:inputType="textCapSentences"
                android:maxLength="25"
                android:maxLines="1" />


            <EditText
                android:id="@+id/edit_country"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bt_height"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:hint="@string/hint_pais"
                android:inputType="textCapSentences"
                android:maxLength="25"
                android:maxLines="1" />

            <EditText
                android:id="@+id/edit_association"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bt_height"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:hint="@string/hint_associacao"
                android:inputType="textCapSentences"
                android:maxLength="15"
                android:maxLines="1" />

            <EditText
                android:id="@+id/edit_nickname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bt_height"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"
                android:hint="@string/hint_apelido"
                android:inputType="textCapSentences"
                android:maxLength="140"
                android:maxLines="1" />


        </LinearLayout>

    </ScrollView>
</RelativeLayout>