<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/bt_height"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:hint="@string/hint_nome_evento"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:maxLength="35"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"/>

            <ImageButton
                android:id="@+id/bt_photo"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:src="@drawable/camera"
                android:scaleType="centerInside"
                android:layout_marginRight="@dimen/medium"
                android:adjustViewBounds="true"
                android:background="@null"
                android:layout_gravity="center"/>
        </LinearLayout>

        <EditText
            android:maxLength="50"
            android:id="@+id/edit_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bt_height"
            android:hint="@string/hint_endereco"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:layout_marginLeft="@dimen/small"
            android:layout_marginRight="@dimen/small" />


        <EditText
            android:id="@+id/edit_city"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bt_height"
            android:hint="@string/hint_city"
            android:maxLength="25"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:layout_marginLeft="@dimen/small"
            android:layout_marginRight="@dimen/small"/>


        <EditText
            android:id="@+id/edit_state"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bt_height"
            android:hint="@string/hint_estado"
            android:maxLength="2"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:layout_marginLeft="@dimen/small"
            android:layout_marginRight="@dimen/small"/>

        <EditText
            android:id="@+id/edit_country"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bt_height"
            android:hint="@string/hint_pais"
            android:maxLength="15"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:layout_marginLeft="@dimen/small"
            android:layout_marginRight="@dimen/small"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/bt_height"
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            >

            <Button
                android:id="@+id/bt_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bt_newevent_selection"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"/>

            <Button
                android:id="@+id/bt_hour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_horario"
                android:background="@drawable/bt_newevent_selection"
                android:layout_marginLeft="@dimen/small"
                android:layout_marginRight="@dimen/small"/>
            />
        </LinearLayout>

        <EditText
            android:id="@+id/edit_desc"
            android:maxLength="140"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bt_height"
            android:hint="@string/hint_descricao"
            android:inputType="textCapSentences"
            android:singleLine="true" />
    </LinearLayout>
</ScrollView>