<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_app"
    android:layout_height="match_parent"
    tools:context="br.com.iecapoeira.actv.NewMusicActivity">

    <TextView
        android:id="@+id/tv_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="@dimen/small"
        android:layout_marginTop="50dp"
        android:text="@string/new_edital"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="@dimen/small"
        android:layout_marginRight="@dimen/small"
        android:hint="@string/hint_title_edital"
        android:inputType="textCapSentences"
        android:maxLines="1" />

    <EditText
        android:id="@+id/edit_link"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bt_height"
        android:layout_marginLeft="@dimen/small"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/small"
        android:hint="@string/hint_edital_link"
        android:inputType="textUri"
        android:maxLines="1" />

</LinearLayout>
